--- a/src/styles/ShoppingList.css
+++ b/src/styles/ShoppingList.css
@@ -4,27 +4,5 @@
     display: flex;
     flex-wrap: wrap;
     max-width: 800px;
-}
-
-.lmj-plant-item {
-    border: solid 2px black;
-    border-radius: 10px;
-    height: 150px;
-    width: 150px;
-    margin: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    position: relative;
-}
-
-.lmj-sales {
-    position: absolute;
-    right: 0px;
-    top: 10px;
-    font-weight: 500;
-    color: white;
-    padding: 5px 10px;
-    background-color: #31b572;
+    gap: 3rem;
 }
