Refont CSS and end Categories

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,4 +1,4 @@
-.lmj-footer {
+.footer {
     color: black;
     padding: 32px;
     border-top: solid 3px black;
@@ -9,6 +9,6 @@
     font-weight: 500;
 }
 
-.lmj-footer-elem {
+.footer__elem {
     margin-bottom: 10px;
 }
