--- a/src/styles/PlantItem.css
+++ b/src/styles/PlantItem.css
@@ -1,11 +1,27 @@
-.lmj-plant-item {
-    display: flex;
-    flex-direction: column;
-    text-transform: capitalize;
+.plantItem__cover {
+    height: 250px;
+    width: 250px;
+    border-radius: 20px;
+    object-fit: cover;
 }
 
-.lmj-plant-item-cover {
-    height: 220px;
-    width: 220px;
-    border-radius: 20px;
+.plantItem {
+    margin: 10px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    text-transform: capitalize;
+    position: relative;
+}
+
+.plantItem__price {
+    position: absolute;
+    border-radius: 20px 20px 20px 0;
+    background-color: #31b472;
+    color: white;
+    padding: 15px;
+    right: 0;
+    top: 0;
+    font-weight: 500;
 }
