--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -1,5 +1,27 @@
-.lmj-cart {
-    padding: 3.2rem;
-    color: #fff;
+.cart {
+    flex: none;
+    padding: 32px;
+    width: 200px;
+}
+
+.cart--open {
+    color: white;
     background-color: #31b572;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.cart__btn {
+    font-size: 1.8rem;
+    background: none;
+    outline: none;
+    border: none;
+    font-weight: 600;
+    cursor: pointer;
+    color: white;
+}
+
+.cart--closed>.cart__btn {
+    color: black;
 }
