--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,4 +1,4 @@
-.lmj-banner {
+.header {
     color: black;
     text-align: right;
     padding: 32px;
@@ -9,11 +9,11 @@
     align-items: center;
 }
 
-.lmj-title {
+.header__title {
     padding-left: 32px;
 }
 
-.lmj-logo {
+.header__logo {
     height: 45px;
     width: 45px;
 }
