--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,7 @@ html {
 
 body {
   margin: 0;
+  box-sizing: border-box;
   font-size: 1.6em;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
