--- a/src/styles/Categories.css
+++ b/src/styles/Categories.css
@@ -6,3 +6,14 @@
 .categories__select {
     margin-right: 15px;
 }
+
+.categories select {
+    background-color: #31b572;
+    cursor: pointer;
+    color: white;
+    padding: 0.5rem;
+    border: none;
+    border-radius: 5px;
+    font-size: 1.6rem;
+    box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
+}
