--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -2,3 +2,9 @@
     display: flex;
     flex-direction: row;
 }
+
+@media screen and (max-width: 875px) {
+    .main {
+        flex-direction: column;
+    }
+}
