--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -18,6 +18,7 @@
 .cart__btn {
     width: 100%;
     padding: 0;
+    margin-bottom: 2rem;
     font-size: 1.8rem;
     background: none;
     border: none;
