--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,267 +1,13 @@
-$cl-primary: #31b573;
+@import 'utils/variables';
+@import 'utils/mixins';
 
-html {
-    font-size: 62.5%;
-}
+@import 'bases/generals';
 
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
+@import 'layouts/header';
+@import 'layouts/footer';
 
-body {
-    margin: 0;
-    font-size: 1.6em;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-        sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-img {
-    width: 100%;
-}
-
-.btn__style {
-    background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
-    border: none;
-    border-radius: 5px;
-    box-shadow: rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, rgba(58, 65, 111, .5) 0 -3px 0 inset;
-    color: #fff;
-    cursor: pointer;
-    margin-top: 1rem;
-    padding: 0.5rem 1rem;
-    transition: box-shadow .15s, transform .15s;
-    font-size: 1.6rem;
-}
-
-.btn__style:hover {
-    box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
-    transform: translateY(-2px);
-}
-
-.btn__style:active {
-    box-shadow: #3c4fe0 0 3px 7px inset;
-    transform: translateY(2px);
-}
-
-.style1 {
-    background-image: radial-gradient(100% 100% at 100% 0, #ff5a5a 0, #ff5454 100%);
-    margin-left: 1rem;
-    padding: 0.5rem 0.8rem;
-}
-
-.style1:hover {
-    box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #e03c3c 0 -3px 0 inset;
-}
-
-.style1:active {
-    box-shadow: #e03c3c 0 3px 7px inset;
-}
-
-.capitalize {
-    text-transform: capitalize;
-}
-
-
-.header {
-    color: black;
-    text-align: right;
-    padding: 32px;
-    border-bottom: solid 3px black;
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: row;
-    align-items: center;
-}
-
-.header__title {
-    padding-left: 32px;
-}
-
-.header__logo {
-    height: 45px;
-    width: 45px;
-}
-
-
-.main {
-    display: flex;
-    flex-direction: row;
-}
-
-@media screen and (max-width: 940px) {
-    .main {
-        flex-direction: column;
-    }
-}
-
-
-.cart {
-    flex: none;
-    padding: 3rem;
-    width: 300px;
-}
-
-@media screen and (max-width: 940px) {
-    .cart {
-        width: 100%;
-    }
-}
-
-.cart--open {
-    color: white;
-    background-color: $cl-primary;
-}
-
-.cart__btn {
-    width: 100%;
-    padding: 0;
-    margin-bottom: 2rem;
-    font-size: 1.8rem;
-    background: none;
-    border: none;
-    font-weight: 600;
-    cursor: pointer;
-    color: white;
-}
-
-.cart--closed>.cart__btn {
-    color: black;
-}
-
-.cart__ul {
-    padding-left: 0;
-}
-
-.cart__li {
-    list-style: none;
-}
-
-.categories {
-    text-align: center;
-    padding-top: 30px;
-}
-
-.categories__select {
-    margin-right: 15px;
-}
-
-.categories select {
-    background-color: $cl-primary;
-    cursor: pointer;
-    color: white;
-    padding: 0.5rem;
-    border: none;
-    border-radius: 5px;
-    font-size: 1.6rem;
-    box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
-}
-
-
-.shoppingList {
-    flex: 1;
-}
-
-.plantList {
-    list-style-type: none;
-    padding: 3rem;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 2rem;
-}
-
-
-.plantItem__cover {
-    height: 250px;
-    width: 250px;
-    border-radius: 2rem;
-    object-fit: cover;
-}
-
-.plantItem {
-    padding: 1rem;
-    background-color: rgba($cl-primary, 0.4);
-    border-radius: 2rem;
-    text-transform: capitalize;
-    position: relative;
-}
-
-.plantItem__txt {
-    margin: 0;
-}
-
-.plantItem__price {
-    position: absolute;
-    border-radius: 20px 20px 20px 0;
-    background-color: $cl-primary;
-    color: white;
-    font-size: 1.8rem;
-    padding: 1.2rem;
-    right: 0;
-    top: 0;
-    font-weight: 500;
-}
-
-.plantItem__body {
-    padding: 0.5rem;
-}
-
-.plantItem__content {
-    display: flex;
-    justify-content: space-between;
-}
-
-.plantItem__btns {
-    display: flex;
-    justify-content: space-between;
-}
-
-
-.footer {
-    color: black;
-    padding: 32px;
-    border-top: solid 3px black;
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: column;
-    align-items: center;
-    font-weight: 500;
-}
-
-.footer__elem {
-    margin-bottom: 10px;
-}
-
-.modalInfo {
-    position: fixed;
-    z-index: 10;
-    background-color: rgba($cl-primary, 0.9);
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.modalInfo__container {
-    position: relative;
-    background-color: #fff;
-    min-width: 300px;
-    width: 80%;
-    max-width: 800px;
-    padding: 3rem;
-    border-radius: 5px;
-}
-
-.modalInfo__btn {
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 1rem;
-}
+@import 'pages/home';
+@import 'components/cart';
+@import 'components/categories';
+@import 'components/plantItem';
+@import 'components/modalInfo';
